--- a/lab3/server/Gemfile
+++ b/lab3/server/Gemfile
@@ -20,6 +20,7 @@ gem 'uglifier', '>= 1.3.0'
 # gem 'therubyracer', platforms: :ruby
 
 gem 'grape'
+gem 'rack-cors', :require => 'rack/cors'
 
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
